--- a/ETH_webscraping.ipynb
+++ b/ETH_webscraping.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 1,
       "metadata": {
         "id": "aSn-aWANfwGS"
       },
@@ -40,7 +40,7 @@
         "soup = BeautifulSoup(page.content, \"html.parser\")\n",
         "price = soup.find('div', {'class':'priceValue'}).get_text()\n",
         "currency = soup.find('h2', {'class':'sc-aba8b85a-0 gmYubB h1'}).get_text()\n",
-        "change = soup.find('span', {'class':'sc-97d6d2ca-0 bIyrLx'}).get_text()\n",
+        "change = soup.find('span', {'class':'sc-97d6d2ca-0 cYiHal'}).get_text()\n",
         "now = datetime.now()\n",
         "scrape_time = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
         "\n",
@@ -55,30 +55,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YGE_F-Z6hXUN",
-        "outputId": "680e40e6-e277-48b0-fa9f-2e688c3a9aea"
+        "outputId": "5b26305b-54aa-4f94-9dd1-b127f619340b"
       },
-      "execution_count": 52,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "$1,209.70\n",
+            "$1,215.25\n",
             "EthereumETH\n",
-            "0.63%\n",
-            "27/12/2022 15:09:49\n"
+            "0.40%\n",
+            "02/01/2023 08:59:03\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aZ640WnmejLH"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -102,18 +93,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ETRqTijm9Olp",
-        "outputId": "1f8af420-6bb2-47f2-a5e5-eb54c591f2e8"
+        "outputId": "12d2de3d-2e0f-4deb-eded-fad058681a6f"
       },
-      "execution_count": 53,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "ETH\n",
-            "1,209.70\n",
-            "0.63\n",
-            "27/12/2022 15:09:49\n"
+            "1,215.25\n",
+            "0.40\n",
+            "02/01/2023 08:59:03\n"
           ]
         }
       ]
@@ -135,7 +126,7 @@
       "metadata": {
         "id": "ipYAnZC89f_O"
       },
-      "execution_count": 54,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -151,16 +142,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_iLlLZlDQ_F",
-        "outputId": "0a804924-0bd7-4a04-c672-2841462b67dd"
+        "outputId": "e0e80c36-4051-4e87-8e77-5637de2710cb"
       },
-      "execution_count": 55,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "                  Time Ticker     Price  Change\n",
-            "0  27/12/2022 15:09:49    ETH  1,209.70    0.63\n"
+            "0  02/01/2023 08:59:03    ETH  1,215.25     0.4\n"
           ]
         }
       ]
@@ -176,7 +167,7 @@
         "  soup = BeautifulSoup(page.content, \"html.parser\")\n",
         "  price = soup.find('div', {'class':'priceValue'}).get_text()\n",
         "  currency = soup.find('h2', {'class':'sc-aba8b85a-0 gmYubB h1'}).get_text()\n",
-        "  change = soup.find('span', {'class':'sc-97d6d2ca-0 bIyrLx'}).get_text()\n",
+        "  change = soup.find('span', {'class':'sc-97d6d2ca-0 cYiHal'}).get_text()\n",
         "  from datetime import datetime\n",
         "  now = datetime.now()\n",
         "  scrape_time = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
@@ -203,8 +194,17 @@
       "metadata": {
         "id": "WjX1z1-tFWI5"
       },
-      "execution_count": 58,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Now we pull data to a csv file in this simple loop:**"
+      ],
+      "metadata": {
+        "id": "D6ZewN-nw1G_"
+      }
     },
     {
       "cell_type": "code",
@@ -219,9 +219,9 @@
           "height": 200
         },
         "id": "c0Bnx_rtIX47",
-        "outputId": "9b497b6c-cc7d-456e-ecc9-f9e835f2788e"
+        "outputId": "889e3e8d-4421-4171-89cf-fa009f7c11e1"
       },
-      "execution_count": 63,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "error",
@@ -230,11 +230,20 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-63-9a68b38f7055>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mpull_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-10-9a68b38f7055>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mpull_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Taking a look at data we got:**"
+      ],
+      "metadata": {
+        "id": "TW_LSTqAxCJm"
+      }
     },
     {
       "cell_type": "code",
@@ -249,36 +258,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vOKpctwuH7CW",
-        "outputId": "41e9d71a-ae23-4966-cf01-cdbe363b46d1"
+        "outputId": "c4d30d24-a9b9-454d-a70e-eacb1018b922"
       },
-      "execution_count": 64,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                   Time Ticker     Price  Change\n",
-            "0   27/12/2022 15:09:49    ETH  1,209.70    0.63\n",
-            "1   27/12/2022 15:11:18    ETH  1,209.70    0.63\n",
-            "2   27/12/2022 15:16:19    ETH  1,210.10    0.59\n",
-            "3   27/12/2022 15:21:19    ETH  1,211.59    0.46\n",
-            "4   27/12/2022 15:26:19    ETH  1,212.68    0.35\n",
-            "5   27/12/2022 15:31:19    ETH  1,216.16    0.02\n",
-            "6   27/12/2022 15:36:20    ETH  1,216.02    0.02\n",
-            "7   27/12/2022 15:41:20    ETH  1,216.04    0.02\n",
-            "8   27/12/2022 15:47:21    ETH  1,214.00    0.14\n",
-            "9   27/12/2022 15:47:57    ETH  1,214.00    0.14\n",
-            "10  27/12/2022 15:52:57    ETH  1,213.68    0.16\n",
-            "11  27/12/2022 15:57:58    ETH  1,213.00    0.20\n",
-            "12  27/12/2022 16:02:58    ETH  1,212.30    0.31\n",
-            "13  27/12/2022 16:07:58    ETH  1,211.98    0.31\n",
-            "14  27/12/2022 16:12:59    ETH  1,212.45    0.26\n",
-            "15  27/12/2022 16:17:59    ETH  1,212.14    0.29\n",
-            "16  27/12/2022 16:22:59    ETH  1,211.75    0.33\n",
-            "17  27/12/2022 16:27:59    ETH  1,210.79    0.52\n",
-            "18  27/12/2022 16:33:00    ETH  1,211.29    0.50\n",
-            "19  27/12/2022 16:38:00    ETH  1,212.50    0.39\n",
-            "20  27/12/2022 16:43:01    ETH  1,211.68    0.46\n"
+            "                  Time Ticker     Price  Change\n",
+            "0  02/01/2023 08:59:03    ETH  1,215.25    0.40\n",
+            "1  02/01/2023 08:59:50    ETH  1,215.25    0.40\n",
+            "2  02/01/2023 09:04:50    ETH  1,215.50    0.44\n",
+            "3  02/01/2023 09:09:51    ETH  1,215.57    0.47\n"
           ]
         }
       ]
